<resources>
    <string name="app_name">Etat Civil</string>
    <string name="information_personne">Informations de la Personne : </string>
    <string name="valider">VALIDER</string>
    <string name="profession">profession</string>
    <string name="tel">Numero téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="pr_nom_s">Prénom(s)</string>
    <string name="nom">Nom</string>
    <string name="sexe">SEXE :</string>
    <string name="masculin">Masculin</string>
    <string name="f_minin">Féminin</string>
    <string name="autres">Autres</string>
    <string name="cin_12_chiffres_pour_les_plus_de_18_ans">CIN</string>
    <string name="aPDP">Ajouter Photo de Profil</string>
    <string name="modifier_date_de_naissance">Ajouter date de naissance</string>
    <string name="_00_00_0000">00-00-0000</string>
    <string name="todo">TODO</string>
    <string name="nomPere">Nom du Père</string>
    <string name="pr_nom_sPere">Prénom(s) du Père</string>
    <string name="nomMere">Nom de la Mère</string>
    <string name="pr_nom_sMere">Prénom(s) de la Mère</string>
    <string name="btnTel">ajouter un numéro de téléphone</string>
    <string name="lien_familliale_de_la_personne">Situation familliale :</string>
    <string name="celibat">Célibataire</string>
    <string name="mariee">Marié(e)</string>
    <string name="texteQRCODE">Voici l\'identifiant de la personne</string>
    <string name="download">Télécharger l\'identifiant</string>
    <string name="retour_l_acceuil">Retourner à l\'acceuil</string>
    <string name="changerPDP">Modifier la photo de profile</string>
    <string name="modifier">MODIFIER</string>
    <string name="supprimer">SUPPRIMER</string>
    <string name="quelle_op_ration_voulez_vous_faire">Quelle opération voulez vous faire ?</string>
    <string name="choisir_photo_de_profil">Choisir Photo de profile</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="importer_depuis_gallery">Importer depuis Gallery</string>
    <string name="scanner_pers">Scanner un identifiant</string>
    <string name="perso_search">Faire une recherche spécifique</string>
    <string name="titreSearch">Quelle type de recherche voulez vous faire ?</string>
    <string name="tous">Lister toutes les personnes</string>
    <string name="insertion">INSERTION D\'UNE PERSONNE</string>
    <string name="n_e_le">né(e) le : </string>
    <string name="sex">"sexe : "</string>
    <string name="situation">Situation familialle</string>
    <string name="asa">"profession : "</string>
    <string name="t_l_phone">Tél :</string>
    <string name="karatra">"CIN : "</string>
    <string name="lot">"Adresse : "</string>
    <string name="fils_de">Fils de :</string>
    <string name="et_de">Et de</string>
    <string name="scanner_dabord_l_identifiant_du_p_re_de_la_personne">Scanner dabord l\'identifiant du père de la personne</string>
    <string name="modidfier_la_personne">MODIDFIER LA PERSONNE</string>
    <string name="supprimer_la_personne">SUPPRIMER LA PERSONNE</string>
    <string name="rechercher_personne_s">RECHERCHER PERSONNE(S)</string>
    <string name="liste_de_toutes_les_personnes">Liste de toutes les personnes</string>
    <string name="bienvenu">Bienvenu sur le système d\'information de l\'état civil\n\n Choisissez l\'opération à éxecuter</string>
</resources>