<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog"
    android:layout_width="wrap_content"
    android:padding="10dp"
    android:layout_margin="25dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/titreDialoque"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/information_personne"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pdp"
                android:layout_width="500dp"
                android:layout_height="500dp"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/white"
                android:visibility="gone"
                tools:visibility="gone" />

            <Button
                android:id="@+id/pdpBTN"
                android:textSize="20sp"
                android:padding="5sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aPDP"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/anarana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#7BBA7E"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/fanampiny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/pr_nom_s"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#7BBA7E"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewSEXE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/sexe"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="34sp" />

        <RadioGroup
            android:id="@+id/radioGroupSexe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/MasculinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculin"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/FéminiButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:text="@string/f_minin"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/AutresButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autres"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/datyBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/modifier_date_de_naissance"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/Daty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="15sp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_00_00_0000"
                android:textAlignment="center"
                android:textColorHint="#7BBA7E"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/adresse"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#7BBA7E"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/asa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/profession"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#7BBA7E"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/cin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/cin_12_chiffres_pour_les_plus_de_18_ans"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#7BBA7E"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />


        <Button
            android:id="@+id/validerAjoutPers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:padding="5sp"
            android:text="@string/modidfier_la_personne"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
        <Button
            android:id="@+id/suppPers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            android:textSize="20sp"
            android:padding="5sp"
            android:text="@string/supprimer_la_personne"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


</ScrollView>