<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="style">

    <ImageView
        android:id="@+id/closeDLG"
        android:layout_width="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_height="30dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="end"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/textMS"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/quelle_op_ration_voulez_vous_faire"
        android:textAlignment="center"
        android:textColor="#070505"
        android:textSize="28sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/modifBTN"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/green"
            android:text="@string/modifier"
            android:textColor="@color/white"
            tools:ignore="style, ButtonStyle" />

        <Button
            android:id="@+id/supprBTN"

            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/red"
            android:text="@string/supprimer"
            android:textColor="@color/white"
            tools:ignore="style, ButtonStyle" />
    </LinearLayout>
</LinearLayout>