<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vfRecherche"
    android:background="@drawable/bg_activity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Recherche">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titreRS"
            android:fontFamily="sans-serif-black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/titreSearch"/>

        <Button
            android:id="@+id/scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:padding="5sp"
            android:background="@drawable/bg_boutons"
            android:layout_marginRight="50dp"
            android:text="@string/scanner_pers"
            android:textColor="#FBF9F9" />


        <Button
            android:id="@+id/tous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:padding="5sp"
            android:background="@drawable/bg_boutons"
            android:layout_marginRight="50dp"
            android:text="@string/tous"
            android:textColor="#FBF9F9" />

        <Button
            android:id="@+id/retourAcceuil"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour_l_acceuil"
            android:textColor="#FBF9F9" />

        <ProgressBar
            android:id="@+id/prg"
            android:visibility="gone"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/ring_prg"
            android:progress="0" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">
        <com.budiyev.android.codescanner.CodeScannerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/camView"
            app:autoFocusButtonColor="@color/white"
            app:autoFocusButtonVisible="true"
            app:flashButtonColor="@color/white"
            app:flashButtonVisible="true"
            app:maskColor="@color/black_shade_1"
            >

        </com.budiyev.android.codescanner.CodeScannerView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titreListe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:text="@string/liste_de_toutes_les_personnes"/>


        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/retour"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour_l_acceuil"
            android:textColor="#FBF9F9" />

    </LinearLayout>

</ViewFlipper>